--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,18 @@ p {
   width: max-content;
   border-radius: 10px;
   overflow-x: auto;
+  height: auto;
+}
+
+.Image-content {
+  margin-right: 10px;
+}
+
+#Caption-div {
+  width: 200px;
+  background-color: #FFECEF;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 #Mymessage {
@@ -207,6 +219,11 @@ p {
   width: 35px;
 }
 
+#Group-avatar {
+  margin-right: 25px;
+  width: 60px;
+  height: 60px;
+}
 
 @media (max-width: 1099px) {
   .Bar-dimensions {
